--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,3 +12,5 @@
   {% endif %}
   </div>
 {% endif %}
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=obx3GTxSMkKl89pIcQGCXA3gO1_AwSeVpKHa_6oz8As&cl=ffffff&w=a"></script>
