--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,13 @@ layout: compress
       </article>
     </div>
 
+    <div class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+      </footer>
+    </div>
+
     {% include scripts.html %}
 
   </body>
-  
-  <footer>
-    {% include footer.html %}
-  </footer>
-  
 </html>
