--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
-<div>
-  <p>© 2024 Your Name. All rights reserved.</p>
+<center>
+<div class="page__footer-follow">
+  <div id="clustrmaps-widget">
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=obx3GTxSMkKl89pIcQGCXA3gO1_AwSeVpKHa_6oz8As&cl=ffffff&w=a"></script>
+  </div>
 </div>
+
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+</center>
