--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,13 @@ layout: compress
         </div>
       </article>
     </div>
-
-    <footer>
-      {% include footer.html %}
-    </footer>
-
+    
+    <div class="page__footer">
+      <footer>
+        {% include footer.html %}
+      </footer>
+    </div>
+    
     {% include scripts.html %}
 
   </body>
